feat(kapita-11): implement end point to fetch transactions history
